add new changes

--- a/index.html
+++ b/index.html
@@ -28,10 +28,18 @@
                     </div>
                 </div>
                 <div class="thumbnails-carousel">
-                    <img src="assets/img/image-product-1-thumbnail.jpg" alt="" srcset="" class="thumbnail-img-desktop">
-                    <img src="assets/img/image-product-2-thumbnail.jpg" alt="" srcset="" class="thumbnail-img-desktop">
-                    <img src="assets/img/image-product-3-thumbnail.jpg" alt="" srcset="" class="thumbnail-img-desktop">
-                    <img src="assets/img/image-product-4-thumbnail.jpg" alt="" srcset="" class="thumbnail-img-desktop">
+                    <div class="mythumb">
+                        <img src="assets/img/image-product-1-thumbnail.jpg" alt="" srcset="" class="thumbnail-img-desktop">
+                    </div>
+                    <div class="mythumb">
+                        <img src="assets/img/image-product-2-thumbnail.jpg" alt="" srcset="" class="thumbnail-img-desktop">
+                    </div>
+                    <div class="mythumb">
+                        <img src="assets/img/image-product-3-thumbnail.jpg" alt="" srcset="" class="thumbnail-img-desktop">
+                    </div>
+                    <div class="mythumb">
+                        <img src="assets/img/image-product-4-thumbnail.jpg" alt="" srcset="" class="thumbnail-img-desktop">
+                    </div>
                 </div>
             </div>
         </div>
@@ -173,7 +181,6 @@
     </main>
 
     <script src="assets/js/mycarousel.js"></script>
-    <script src="assets/js/caroulsel-desktop.js"></script>
     <script src="assets/js/counter.js"></script>
     <script src="assets/js/navmenu.js"></script>
     <script src="assets/js/cart.js"></script>
